# Recall

./: .gitignore  LICENSE  README.md
backend/: docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/core/: config.py  constants.py  settings.py
backend/app/db/: qdrant.py  sqlitedb.py
backend/app/debug/: ingest_file.py  ingestion.py  vector_roundtrip.py
backend/app/embeddings/: minilm.py
backend/app/ingest/: chunking.py  doc_id.py  ingestion.py
backend/app/llm/: client.py  factory.py  generation.py
backend/app/retrieval/: retrieve.py
backend/app/tests/: eval.json  test_db.py
frontend/app/: page.tsx
