[project]
name = "recall"
version = "0.2.1"
description = "Local-first system to store, recall, and semantically search personal documents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.40.0",
]

[tool.setuptools]
packages = ["app"]
